# vite-tauri-template

./: .gitattributes  .gitignore  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.node.json  uno.config.ts  vite.config.ts
scripts/: version.ts
src/: main.tsx  router.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/extensions/react-devtools/: manifest.json  panel.html
src-tauri/extensions/react-devtools/popups/: deadcode.html  development.html  disabled.html  outdated.html  production.html  restricted.html  unminified.html
src-tauri/src/: lib.rs  main.rs
src-tauri/src/plugins/tauri-plugin-dev-invoke/: Cargo.toml
src-tauri/src/plugins/tauri-plugin-dev-invoke/src/: lib.rs  server.rs
src/components/buttons/: Button.tsx  GreetButton.tsx  index.ts
src/components/theme/: ThemeManager.tsx
src/pages/: index.ts
src/pages/app/: App.tsx  index.ts
src/pages/home/: Home.tsx
src/routes/: __root.tsx  index.tsx  router.tsx
src/shared/stores/: useGlobalStore.ts
src/shared/styles/: global.less  theme-transition.less  uno.css
src/shared/types/: global.d.ts  utils.d.ts
src/utils/: command.ts  tauri-invoke-api.ts
