[package]
name = "vite-tauri-template"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant, but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "vite_tauri_template_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dev-invoke = { path = "./src/plugins/tauri-plugin-dev-invoke" }
# 处理 Typescript 类型并导出
specta = "2.0.0-rc.24"
specta-typescript = "=0.0.11"
tauri-specta = { version = "=2.0.0-rc.24", features = ["typescript"] }
