[package]
name = "tauri-plugin-dev-invoke"
authors = ["Mahmoud Almontasser <almontasser@outlook.com>"]
repository = "https://github.com/almontasser/tauri-plugin-dev-invoke"
homepage = "https://github.com/almontasser/tauri-plugin-dev-invoke"
version = "0.2.0"
edition = "2021"
description = "允许外部浏览器通过 HTTP 调用 Tauri 命令，用于开发/测试"
license = "MIT OR Apache-2.0"
keywords = ["tauri", "plugin", "dev", "testing", "invoke"]

[dependencies]
tauri = { version = "2", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tiny_http = "0.12"